--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<link rel="stylesheet" href="all.css">
 </head>
 <body>
-
+<script src="skript.js"></script>
 </body>
 </html>
